# githubscan

./: .cfignore  .dockerignore  .gitignore  .pre-commit-config.yaml  Procfile  README.md  all_vars.env  docker-compose.yml  manage.py  manifest.yml  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  sample.env  test.txt
.circleci/: config.yml
.devcontainer/: compose.yaml  db.env  devcontainer.json  on-create.sh  post-attach.sh
common/: admin.py  admin_views.py  apps.py  common.py  functions.py  models.py  tasks.py  urls.py  views.py  web_requests.py
common/migrations/: 0001_initial.py  0002_alter_jsonstore_processed_data_and_more.py  0003_alter_jsonstore_uk_bank_holidays_last_update.py  0004_remove_jsonstore_uk_bank_holidays_and_more.py  0005_jsonstore_processed_data_time_and_more.py
common/tests/: conftest.py
config/: asgi.py  celery.py  date_formats.py  schema.py  settings.py  severities.py  urls.py  wsgi.py
emailreport/: apps.py
emailreport/helper/: fetch.py  format.py  send.py
gecko/: apps.py
gecko/helper/: fetch.py  push.py
github/: admin.py  admin_views.py  apps.py  client.py  models.py
github/db/: retriver.py  updater.py
github/gqlQueries/: repoTopics.gql  repos.gql  teamRepo.gql  teams.gql  vulnerabilityAlerts.gql
github/helper/: DB.py
github/migrations/: 0001_initial.py  0002_auto_20190517_1528.py  0002_auto_20191109_1746.py  (+15 more)
report/: admin.py  apps.py  db.py  models.py  operators.py  processor.py  reader.py  report.py  urls.py  views.py
scanner/: __init__.py  apps.py  gh_api_client.py  gh_query_builder.py  gh_query_executor.py  operators.py  scanner.py
user/: admin.py  apps.py  models.py
(+178 files in other folders)
